service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-papa-service
  namespace: civil-web
  labels:
    app: civil-engineer-web
spec:
  type: ClusterIP
  selector:
    app: web-papa
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
