ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-papa-ingress
  namespace: civil-web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: cloudtucu.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-papa-service  # TIENE QUE SER IGUAL AL NAME DEL SERVICE
                port:
                  number: 80
